# daml-dit-ddit

./: .gitignore  Makefile  README.md  dabl-app.jsonnet  mypy.ini  pyproject.toml  pytest.ini
daml_dit_api/: __init__.py  integration_api.py  integration_runtime_spec.py  package_metadata.py
daml_dit_api/ddit/: common.py  main.py  subcommand_build.py  subcommand_genargs.py  subcommand_show.py
daml_dit_api/main/: __init__.py  __main__.py  common.py  config.py  integration_context.py  integration_ledger_context.py  integration_time_context.py  integration_webhook_context.py  log.py  main.py  package_metadata_introspection.py  util.py  web.py
daml_dit_ddit/: __init__.py  common.py  log.py  main.py  py.typed  subcommand_build.py  subcommand_clean.py  subcommand_ditversion.py  subcommand_genargs.py  subcommand_inspect.py  subcommand_install.py  subcommand_release.py  subcommand_run.py  subcommand_show.py  subcommand_targetname.py
