[tool.poetry]
name = "daml-dit-ddit"
version = "0.4.7"
description = "DABL DIT File Tool"
authors = ["Mike Schaeffer <mike.schaeffer@digitalasset.com>"]
readme = "README.md"
repository = "https://github.com/digital-asset/daml-dit-ddit"
keywords = ["daml", "blockchain", "dlt", "distributed ledger", "digital asset"]

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
dacite = "*"
pyyaml = "^5"
pex = "2.1.28"
daml-dit-api = "0.3.3"
GitPython = "3.1.12"
PyGithub = "1.54.1"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "^5.4.3"
pytest-asyncio = "*"
pytest-codestyle = "*"

[tool.poetry.extras]
develop = []

[tool.poetry.scripts]
ddit = "daml_dit_ddit:main"

[build-system]
requires = ["poetry_core==1.0.0a8"]
build-backend = "poetry.core.masonry.api"
